--- a/src/posts/another-blog-post.mdx
+++ b/src/posts/another-blog-post.mdx
@@ -1,3 +1,9 @@
+---
+date: 2023-04-19
+title: Another Blog
+description: Watch out, I'm on a roll!
+---
+
 # Oh Dang
 
 This blog is even better than the last one.
