--- a/src/posts/first-blog.mdx
+++ b/src/posts/first-blog.mdx
@@ -1,3 +1,9 @@
+---
+date: 2023-04-19
+title: My First Blog
+description: This is my first MDX blog post.
+---
+
 # Hello!
 
 This is my first blog post.
