feat: create a layout for MDX posts

--- a/src/posts/another-blog-post.mdx
+++ b/src/posts/another-blog-post.mdx
@@ -4,6 +4,8 @@ title: Another Blog
 description: Watch out, I'm on a roll!
 ---
 
+export { default as default } from '../components/post-layout.js';
+
 # Oh Dang
 
 This blog is even better than the last one.
